@@ -53,6 +53,16 @@
 </tr>
 </table>
 <p>
+2004-02-13  Peter Boos  &lt;pedib@colorfullife.com&gt;
+
+<UL>
+  <LI> coders/wmf.c (util_draw_arc): Fixes to improve handling for pie,
+        arc, and chord.  These fixes produce correct output for
+        wmf/examples/fjftest.wmf, but it is not known if they are correct
+        for all cases.
+
+</UL>
+<p>
 2004-02-12  Tim Hunter  &lt;cyclists@nc.rr.com&gt;
 
 <UL>
